--- a/ui/newconnectiondialog.ui
+++ b/ui/newconnectiondialog.ui
@@ -64,6 +64,13 @@
         </property>
        </widget>
       </item>
+	  <item row="5" column="0">
+       <widget class="QRadioButton" name="rbSLCAN">
+        <property name="text">
+         <string>SLCan (Extended) Connection</string>
+        </property>
+       </widget>
+      </item>
      </layout>
     </widget>
    </item>
